Fix overflow on info bar + Events between playlist and player handled in a cleaner way

--- a/css/player.css
+++ b/css/player.css
@@ -142,6 +142,7 @@
     font-family: helvetica, arial, sans-serif;
     font-size: 1.3em;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 #bar {
